--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "description": "A sandboxed JavaScript interpreter in JavaScript",
   "dependencies": {
     "acorn": "^3.2.0",
+    "async": "^2.0.0-rc.6",
     "lodash": "^4.13.1",
+    "ntimer": "^0.5.3",
     "taglog": "^1.1.0"
   },
   "bundleDependencies": [],
